src/objects/agf__ADM_Solution_Overview__c.object
<CustomObject>
    <description>A Solution Overview is a presentation created for a release to provide an overview of a designated set of features. This object tracks the location, status, and user story &amp; branding cross references for all solution overviews.</description>
    <fields>
        <fullName>agf__Big_Marketing_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These Solution Overviews are planned for empahsis in release and launch Marketing efforts</description>
        <label>Big Marketing Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Customer_Communication_Requirement__c</fullName>
        <inlineHelpText>Will this product enhancement or feature enablement require proactive communication from SFDC to customer Sys Admin&apos;s informing them of a behavior change or action they will be required to take?</inlineHelpText>
        <label>Customer Communication Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Customer_communication_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if this feature or product enhancement will require proactive communication from Salesforce.com to customer System Administrators informing them of a behavior change or action they need to take.</inlineHelpText>
        <label>Customer communication required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <inlineHelpText>Enter specific details of your features or feature enhancements which are customer impacting.</inlineHelpText>
        <label>Description</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Editions__c</fullName>
        <inlineHelpText>Which editions will your feature be enabled for?  Select all that apply.</inlineHelpText>
        <label>Editions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Edition</fullName>
                </value>
                <value>
                    <fullName>Group Edition</fullName>
                </value>
                <value>
                    <fullName>Professional Edition</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Unlimited Edition</fullName>
                </value>
                <value>
                    <fullName>Developer Edition</fullName>
                </value>
                <value>
                    <fullName>database.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Enter_Idea_Exchange_URL__c</fullName>
        <inlineHelpText>If feature is associated to an Idea(s) on the Idea Exchange - enter URL(s) here and update the Ideas  themselves with comments &amp; status changes.</inlineHelpText>
        <label>Enter Idea Exchange URL(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Exception_Date__c</fullName>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Exec_Approval_Receved_WRoR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Off Cycle releases resulting in features being enabled outside of 24hrs of the release require Executive approval.
This approval is requested during the Weekly Review of Releases (WRoR) Meeting</inlineHelpText>
        <label>Exec Approval Received @ WRoR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Explain_License_Type__c</fullName>
        <inlineHelpText>If feature requires additional license, please list license requirements, pricing here.</inlineHelpText>
        <label>If  &quot;YES&quot; - Explain License Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_no_customer_comm_required__c</fullName>
        <inlineHelpText>Provide explicit details why no customer communication is required</inlineHelpText>
        <label>Explain if &quot;NO&quot; Customer Comm Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Feature_Enablement_Timeline__c</fullName>
        <inlineHelpText>All features must be enabled with the release or within 24 hrs of the release.
*No exceptions*</inlineHelpText>
        <label>Feature Enablement Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Release</fullName>
                </value>
                <value>
                    <fullName>Post Scripts (within 24hrs)</fullName>
                </value>
                <value>
                    <fullName>BT Perm (within 24hrs)</fullName>
                </value>
                <value>
                    <fullName>Off Cycle (Requires Exec Approval)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Feature_Enablement__c</fullName>
        <inlineHelpText>Identify how this feature will be enabled for customers.  Note: Customers on the &quot;Do Not Auto Enable Features&quot; list will never have features automatically turned on unless they request it.</inlineHelpText>
        <label>Feature Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled for organization and end users -- Respects DNAE</fullName>
                </value>
                <value>
                    <fullName>Enabled for organization and end users -- Does not respect DNAE</fullName>
                </value>
                <value>
                    <fullName>Enabled for organization -- Requires system admin configuration</fullName>
                </value>
                <value>
                    <fullName>Not auto enabled -- BT perm must be enabled by Customer Support or PM</fullName>
                </value>
                <value>
                    <fullName>Multiple features embedded in SO - See SO for enablement information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Feature_Requires_Licence__c</fullName>
        <inlineHelpText>Please indicate if feature requires additional license.</inlineHelpText>
        <label>Feature Requires License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__If_Other_Please_Explain__c</fullName>
        <inlineHelpText>If you chose &apos;OTHER&apos; for your feature enablement timing, please provide specific details here.</inlineHelpText>
        <label>If Enablement Timing=OTHER, Explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Include_in_Admin_Preview__c</fullName>
        <label>Include in Admin Preview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field should be checked when a feature(s) is not customer facing, but useful and/or valuable knowledge for internal audiences.</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Internal_feature_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal feature only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Level__c</fullName>
        <inlineHelpText>Temporary Field for William Gradin</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Major_Minor_Status__c</fullName>
        <label>Major-Minor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Feature</fullName>
                </value>
                <value>
                    <fullName>Minor Feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Marketing_Description__c</fullName>
        <inlineHelpText>Enter the Marketing description for the release preview document</inlineHelpText>
        <label>Marketing Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Marketing_Key_Benefits__c</fullName>
        <inlineHelpText>2 - 4 bullet points of key business benefits.  If feature can&apos;t easily be tied to business benefits then put 2 - 4 key technical benefits</inlineHelpText>
        <label>Marketing Key Benefits</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Marketing_Name_2__c</fullName>
        <inlineHelpText>Temporary field for William Gradin to use</inlineHelpText>
        <label>Marketing Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Marketing_Name__c</fullName>
        <inlineHelpText>Marketing Name for Release Preview document.  This field is audited.</inlineHelpText>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Marketing_Tag_Line__c</fullName>
        <inlineHelpText>Sentence fragment to briefly describe the feature.</inlineHelpText>
        <label>Marketing Tag Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Off_Cycle_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the feature will not be released with R1 or R2 releases.</inlineHelpText>
        <label>Off Cycle Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Planned_Release_Status__c</fullName>
        <inlineHelpText>What is the plan for the marketed availability of this product/feature?</inlineHelpText>
        <label>Planned Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generally Available</fullName>
                    <default>true</default>
                    <label>Generally Available</label>
                </value>
                <value>
                    <fullName>Limited Release</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Developer Preview</fullName>
                </value>
                <value>
                    <fullName>Developer Toolkit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Division__c</fullName>
        <label>Product Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Core - Architecture</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - Content</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - Google Apps</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - Ideas</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - Marketing/SFGA</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - PRM</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - SFA</fullName>
                </value>
                <value>
                    <fullName>CRM Apps - SSS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Platform - Admin</fullName>
                </value>
                <value>
                    <fullName>Platform - API/Integration/Security</fullName>
                </value>
                <value>
                    <fullName>Platform - Application Development</fullName>
                </value>
                <value>
                    <fullName>Platform - Appstore</fullName>
                </value>
                <value>
                    <fullName>Platform - Desktop Clients</fullName>
                </value>
                <value>
                    <fullName>Platform - Mobile</fullName>
                </value>
                <value>
                    <fullName>Platform - Other</fullName>
                </value>
                <value>
                    <fullName>SFA - Verticals Marketing</fullName>
                </value>
                <value>
                    <fullName>SFA - Verticals Product</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Leader__c</fullName>
        <label>Product Leader</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chuck Dietrich</fullName>
                </value>
                <value>
                    <fullName>Clara Shih</fullName>
                </value>
                <value>
                    <fullName>David Brooks</fullName>
                </value>
                <value>
                    <fullName>Elay Cohen</fullName>
                </value>
                <value>
                    <fullName>Eric Bezar</fullName>
                </value>
                <value>
                    <fullName>Jamie Grenney</fullName>
                </value>
                <value>
                    <fullName>Jim Rivera</fullName>
                </value>
                <value>
                    <fullName>John Ball</fullName>
                </value>
                <value>
                    <fullName>Kraig Swensrud</fullName>
                </value>
                <value>
                    <fullName>Mark Abramowitz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Set</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Exchange</fullName>
                </value>
                <value>
                    <fullName>User Interface</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Admin &amp; Tools</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Ideas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Release_Status__c</fullName>
        <inlineHelpText>What is the plan for the marketed availability of this product / feature?</inlineHelpText>
        <label>Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                    <color>#E27001</color>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>Beta</fullName>
                    <color>#78C953</color>
                    <label>Beta</label>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                    <color>#0B6FCE</color>
                    <label>Pilot</label>
                </value>
                <value>
                    <fullName>Developer Preview</fullName>
                    <color>#F3D904</color>
                    <label>Developer Preview</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Solution Overviews</relationshipLabel>
        <relationshipName>Solution_Overviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Solution_Overview_Link__c</fullName>
        <label>Solution Overview Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Solution_Overview_Status__c</fullName>
        <label>Solution Overview Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Target_Audience__c</fullName>
        <inlineHelpText>Select all that apply.  Who will be the primary users of this product/feature?</inlineHelpText>
        <label>Target Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Target_Off_Cycle_Release_Date__c</fullName>
        <inlineHelpText>If you chose &quot;Off Cycle&quot;, please enter the target date of this enablement/release.
This requires Exec Approval. You should have received an automated email with instructions on how to obtain this Exec Approval.</inlineHelpText>
        <label>Target Off Cycle Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Target_Release_Date__c</fullName>
        <inlineHelpText>If you chose &apos;Off-Cycle&apos; for your feature enablement timing, please provide the TARGET date of this enablement/release.
&apos;Off Cycle&apos; requires Exec Approval. You should have received an automated email with instructions on how to obtain this Exec Approval.</inlineHelpText>
        <label>Off Cycle Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__WRoR_Approval_Date__c</fullName>
        <inlineHelpText>If you chose &quot;Off Cycle&quot;, please list the release date which the Exec Team have now approved.
You would have received this approved date from attending the Weekly Review of Releases meeting.</inlineHelpText>
        <label>Exec Approved Release Date</label>
        <type>Date</type>
    </fields>
    <label>Solution Overview</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__X162_Solution_Overviews1</fullName>
        <columns>NAME</columns>
        <columns>agf__Solution_Overview_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>162 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x148SolutionOverviews</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Big_Marketing_Push__c</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>148 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x150SolutionOverviews</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Big_Marketing_Push__c</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>150 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x152SolutionOverviews</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Big_Marketing_Push__c</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>152 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x152SolutionOverviewsPlatform</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Product_Division__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Target_Audience__c</columns>
        <columns>agf__Include_in_Admin_Preview__c</columns>
        <columns>agf__Solution_Overview_Status__c</columns>
        <columns>agf__Solution_Overview_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Product_Division__c</field>
            <operation>startsWith</operation>
            <value>Platform</value>
        </filters>
        <label>152 Solution Overviews - Platform</label>
    </listViews>
    <listViews>
        <fullName>agf__x154SolutionOverviews_d_3</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Solution_Overview_Status__c</columns>
        <columns>agf__Big_Marketing_Push__c</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>154 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x156SolutionOverviewsPlatform</fullName>
        <columns>NAME</columns>
        <columns>agf__Product_Manager__c</columns>
        <columns>agf__Product_Division__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Target_Audience__c</columns>
        <columns>agf__Include_in_Admin_Preview__c</columns>
        <columns>agf__Solution_Overview_Status__c</columns>
        <columns>agf__Solution_Overview_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Product_Division__c</field>
            <operation>startsWith</operation>
            <value>Platform</value>
        </filters>
        <label>156 Solution Overviews - Platform</label>
    </listViews>
    <listViews>
        <fullName>agf__x158SolutionOverviews</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>158 Solution Overviews</label>
    </listViews>
    <listViews>
        <fullName>agf__x160SolutionOverviews</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>160 Solution Overviews</label>
    </listViews>
    <nameField>
        <label>Solution Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Overviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>